# epic-free

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  claim.yml  docker.yml
src/epic_free/: __init__.py  app.py  browser.py  cleanup.py  config.py  http_client.py  logging_setup.py
src/epic_free/epic/: __init__.py  auth.py  promotions.py  store.py
src/epic_free/llm/: __init__.py  gemini.py  openai_compat.py  parse.py  patch.py
tests/: conftest.py  test_app_timeout.py  test_checkout_security.py  test_cleanup.py  test_config.py  test_promotions.py  test_providers.py
