[project]
name = "epic-free"
version = "0.5.0"
description = "Gracefully claim weekly free games from the Epic Games Store (gemini/glm/openai)."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Autsunset" }]
keywords = ["epic", "epic-games-store", "free-games", "playwright", "captcha", "hcaptcha"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
]
dependencies = [
    "apscheduler>=3.11.0",
    "hcaptcha-challenger[camoufox]>=0.19.0",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.8.1",
    "pytz>=2024.1",
    "requests>=2.31.0",
    "tenacity>=8.2.3",
]

[project.scripts]
epic-free = "epic_free.app:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epic_free"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
